# CV_alg

./: README.md  cv20_ex01.tgz  cv20_ex02.tgz  cv20_ex03.tgz  cv20_ex04.tgz  cv20_prog_test.tgz
cv20_ex01/cpp/: CMakeLists.txt  main.cpp
cv20_ex01/cv20_ex01/: CMakeLists.txt  gradient_map.c  hough_transform.c
cv20_ex02/cv20_ex02/: hsTemplate.c  lkTemplate.c
cv20_ex03/cv20_ex03/: diff_tensor.c  diff_tensor.h  fabric.pgm  finger_scaled.pgm  libraries.h  pde_morphology.c  xmas.pgm
cv20_ex04/cv20_ex04/: libraries.h  segmentation.c
cv20_prog_test/: CMakeLists.txt  libraries.h  simple  simple_filter.c
cv20_prog_test/cpp/: CMakeLists.txt  main.cpp
cv20_prog_test/untitled/: CMakeLists.txt  main.cpp
